chore: refactor reports to json